Stop overflowing of title

--- a/_sass/2-sections/_projects.sass
+++ b/_sass/2-sections/_projects.sass
@@ -18,6 +18,7 @@
     margin: -10px auto 5px auto
 
   .big-title
+    min-width: 275px
     font:
       size: 26px
       weight: 500
@@ -76,7 +77,7 @@
   margin: 0 auto
   text-align: center
   max-width: 800px
-  
+
 @media (max-width: 700px)
   .nav-col-small
     display: none
